# LLM-ZoomCamp-Outputs

./: .gitignore  README.md  Setup.md  agents.ipynb  ingest.py  main.py  notebook.ipynb  persistent_rag_ingest.ipynb  pyproject.toml  rag_helper.py  rag_ingest.ipynb  sqlite_ingest.ipynb
dlt_homework/: pyproject.toml
module1_agentic-rag/: agents.ipynb  notebook.ipynb  rag_ingest.ipynb
module1_homework/: README.md  course_rag.ipynb  helper.py
module2_homework/: README.md  course_vectorsearch.ipynb  main.py  pyproject.toml
module2_vector-search/: module2_class.ipynb  module2_persistent.ipynb  module2_pgvector.ipynb
module3_homework/: README.md
module3_homework/flows/: 3_rag_with_websearch.yaml
module4_evaluation/: data-gen.ipynb
module4_evaluation/data/: agent-answers.csv  agent-evaluations.csv  ground_truth-current.csv  rag-answers-new.csv  rag-evaluations-new.csv
module4_homework/: README.md  course_evaluation.ipynb  main.py  pyproject.toml
module5_homework/: README.md  course_monitoring.ipynb  main.py  pyproject.toml  rag_helper.py  sqlite_exporter.py  starter.py
module5_monitoring/: Dockerfile  Makefile  README.md  assistant.py  dashboard.py  db_query.py  docker-compose.yaml  pyproject.toml
