[project]
name = "module5-monitoring"
version = "0.1.0"
description = "LLM Zoomcamp Module 5 Monitoring"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "minsearch>=0.1.0",
    "openai>=2.41.1",
    "pandas>=3.0.3",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "streamlit>=1.59.2",
    "tqdm>=4.68.2",
]